NGA-327 Adding migration code for multiproduct
