# nest-server/src/products/products-l3-dist.controller.ts
@@ -6,6 +6,7 @@ import { ProductL3DistDto } from './dto/product-l3-dist.dto';
 import { ProductsService } from './products.service';
 import { Request } from 'express';
 import { ClassValidationPipe } from 'src/validation/class-validation.pipe';
+import { ProductL3Src } from './product-l3-src.entity';
 
 @ApiTags('products/l3-dist')
 @Controller('products/l3-dist')
@@ -30,9 +31,11 @@ export class ProductsL3DistController extends ProductsController<ProductL3Dist, 
 
   @Post('')
   @ApiBody({ type: ProductL3DistDto })
-  create (@Body(new ClassValidationPipe()) product: ProductL3DistDto) {
-    return this.productsService.create<ProductL3Dist, ProductL3DistDto>(this.productType, product);
+  create (@Body(new ClassValidationPipe()) product: ProductL3DistDto, @Param('productL3SrcId', new ParseIntPipe()) productL3SrcId: number) {
+    const productLink = this.productsService.findOne<ProductL3Src>(ProductL3Src, productL3SrcId)
+    return this.productsService.create<ProductL3Dist, ProductL3DistDto>(this.productType, product, "sourceProduct", productLink);
   }
+
   @Put(':productId')
   @ApiBadRequestResponse({ description: 'Could not find the survey' })
   update (@Param('productId', new ParseIntPipe()) productId: number, @Body(new ClassValidationPipe()) updateProductDto: ProductL3DistDto) {
